--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,8 @@
-# Python cache
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-
-# Virtual environment
 venvi/
-env/
+_pycache_/
+
 .venvi/
+._pycache_/
 
-# IDE / Editor files
-.vscode/
-.idea/
-
-# Environment variables
-*.env
-.env.*
-
-# Byte-compiled files
-*.DS_Store
-
-# Python egg metadata
-*.egg-info/
-dist/
-build/
-
-# Logs
-*.log
-
-# SQLite DB (if using)
-*.sqlite3
-*.db
-
-# Pytest cache
-.pytest_cache/
-
-# MyPy cache
-.mypy_cache/
-
-# FastAPI static files (optional)
-static/
-
-# Pip
-pip-log.txt
-pip-wheel-metadata/
-
-# Virtual environment binaries
-Scripts/
+venvi
+_pycache_
